recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:3: error: not found: value trees
 else {trees(steps-1,length*shrink,angle,shrink)}
       ^